--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 </head>
 
 <body>
+    <header>
+        <div>
+            <a img src="./img/lambda-black.png"></a>
+        </div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="products.html">Products</a>
+            <a href="blog.html">Blog</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
     <div class="container">
    
         <section class="top-content">
