--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div>
-            <a img src="./img/lambda-black.png"></a>
+            <img src="./img/lambda-black.png" alt="Lambda logo">
         </div>
         <nav>
             <a href="index.html">Home</a>
