aligned navigation with logo - added header img

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <div>
+        <div class="logo">
             <img src="./img/lambda-black.png" alt="Lambda logo">
         </div>
         <nav>
@@ -23,6 +23,9 @@
             <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </nav>
+        <div class="header-img">
+            <img src="img/jumbo.jpg" alt="Slow capture photo of lights on cars on a highway at night">
+        </div>
     </header>
     <div class="container">
    
