completed index page for HTML and CSS

--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
             <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </nav>
-        <div class="header-img">
-            <img src="img/jumbo.jpg" alt="Slow capture photo of lights on cars on a highway at night">
-        </div>
     </header>
     <div class="container">
-   
+        <div class="top-img">
+            <img src="img/jumbo.jpg" alt="Slow capture photo of lights on cars on a highway at night">
+        </div>
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
