completed about and index pages

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
             <button>Learn More</button>
           </div>  
         </div>
-        <div class="boxes">
+        <div class="boxes office">
           <div class="box">
             <img src="img/about-office.png" alt="strategy">
           </div>
@@ -71,7 +71,7 @@
             <button>Learn More</button>
           </div>
         </div>
-        <div class="boxes">
+        <div class="boxes office">
           <div class="box">
             <img src="img/about-meeting.png" alt="strategy">
           </div>
